--- a/paper/tex/aktuelleEntwicklung/multilayerPerceptron/multilayerPerceptron.tex
+++ b/paper/tex/aktuelleEntwicklung/multilayerPerceptron/multilayerPerceptron.tex
@@ -1,13 +1,13 @@
 \section{Multilayer Perceptron}
 
-Eines der bekanntesten Architekturen der neuronalen Netze ist das sogenannte \emph{Multilayer Perceptron}. Diese sehr vielfältig eingesetzte Struktur verwendet den erläuterten Backpropagation-Lernalgorithmus und erzielt damit in der Regel sehr gute Ergebnisse. Beim MLP spielt die Aktivierungsfunktion durchaus auch eine tragende Rolle und ist nicht fest definiert (häufig wird jedoch die Sigmoid-Funktion verwendet). Wenn das Netzwerk sehr viele verborgene Zwischenschichten besitzt wird es allgemein als \emph{tief} bezeichnet kann es zu Problemen beim Training kommen. Hierbei gibt es spezielle Techniken die dieses Problem lösen können und generell unter dem Namen \emph{depplearning} zusammengefasst werden. Da diese Architektur als so vielfältig gilt kann sie in vielen verschiedenen Anwendungsbereichen eingesetzt werden, hier ein paar Beispiele: 
+Eines der bekanntesten Architekturen der neuronalen Netze ist das sogenannte \emph{Multilayer Perceptron}. Diese sehr vielfältig eingesetzte Struktur verwendet den erläuterten Backpropagation-Lernalgorithmus und erzielt damit in der Regel sehr gute Ergebnisse. Beim MLP spielt die Aktivierungsfunktion durchaus auch eine tragende Rolle und ist nicht fest definiert (häufig wird jedoch die Sigmoid-Funktion verwendet). Wenn das Netzwerk sehr viele verborgene Zwischenschichten besitzt wird es allgemein als \emph{tief} bezeichnet und es kann zu Problemen beim Training kommen. Hierbei gibt es spezielle Techniken die diese Probleme lösen können und generell unter dem Namen \emph{depplearning} zusammengefasst werden. Da diese Architektur als so vielfältig gilt kann sie in vielen verschiedenen Anwendungsbereichen eingesetzt werden, hier ein paar Beispiele: 
 
 \begin{multicols}{2}
 \begin{itemize}
 \item Mustererkennung 
 \item Funktionenapproximation
 \item Klassifizierung
-\item Prognose,
+\item Prognose
 \item Diagnose
 \item Steuerung 
 \item Optimierung
@@ -29,6 +29,7 @@ Diese Struktur gilt als mehrschichtige vorwärtsgekoppeltes Netzwerk. Teilweise 
 
 Das Netz kann \emph{n} Eingabewerte annehmen, welche jeweils mit den Neuronen $x_1$ bis $x_n$ entgegengenommen werden. Die einzelnen Neuronen werden mit einer Aktivierungsfunktion belegt und verwenden intern einen eigenen Schwellwert. Das durch-iterieren diverser Eingabewerte wird auch als \emph{Feedforward} bezeichnet, wobei am Ende \emph{m} Ausgabewerte entstehen die über die Ausgabeneutronen der letzten Schicht weitergeleitet werden (siehe $z_1$ bis $z_n$). 
 
+\FloatBarrier
 
 \paragraph{Aktivierungsfunktionen}
 
@@ -48,15 +49,17 @@ Die Konstante \emph{b} beschreibt dabei die Steilheit der Kurve. Die Ableitung d
 	\label{fig:mlpSigmoid}
 \end{figure}
 
-\subparagraph{Tangens Hyperbolicus}
 
-Die Funktion wird auch häufig als Aktivierungsfunktion verwendet und besitzt die Gleichung sowie die Ableitungen: 
 
-\begin{equation}
-f(x) = tanh(x) = \frac{2}{1+exp(-2x}-1
-\end{equation}
+% \subparagraph{Tangens Hyperbolicus}
 
-\begin{equation}
-f'(x) = 1 - tanh^2(x)
-\end{equation}
+% Die Funktion wird auch häufig als Aktivierungsfunktion verwendet und besitzt die Gleichung sowie die Ableitungen: 
+
+% \begin{equation}
+% f(x) = tanh(x) = \frac{2}{1+exp(-2x}-1
+% \end{equation}
+
+% \begin{equation}
+% f'(x) = 1 - tanh^2(x)
+% \end{equation}
 
