--- a/paper/tex/geschichtliches/fazit/fazit.tex
+++ b/paper/tex/geschichtliches/fazit/fazit.tex
@@ -3,8 +3,6 @@
 
 \subsection{Beantwortung der Leitfragen}
 
-Generell wurden folgende Leitfragen zumindest in Teilen besprochen: 
-
 \begin{itemize}
 \item Woher kommt Deep Learning und wie ist dieser Begriff im Kontext zur künstlichen Intelligenz einzuordnen?
 \item Welche Entwicklungen hat das Neuronale Netz von damals zu heute durchgemacht?
@@ -12,4 +10,4 @@ Generell wurden folgende Leitfragen zumindest in Teilen besprochen:
 
 Bei dem Begriff des Deeplearnings handelt es sich um eine Weiterentwicklung des \emph{Machine Learnings}. Er beschreibt eine Gruppe von Netzstrukturen welche zahlreiche Zwischenschichten beinhalten (englisch \emph{hidden Layers}). Das \emph{Convolutional Neural Network} ist dabei ein Vertreter einer solchen Struktur. Diese Art von Architektur benötigen spezielle Trainingsmechanismen. Einen werde ich im folgenden Abschnitt näher behandeln (siehe Kapitel \ref{sec:backprop}). 
 
-Generell wurden jedoch die wesentlichen Vorstufen grob angerissen. Wir haben die Ursprünge der ersten künstlichen Neuronen (siehe MPN \ref{sc:mpn}, Perceptron \ref{sc:per}) gesehen und wie diese auf der Biologie des Menschen basieren. Darüber hinaus wurden die Verbesserungen der ersten Versuche vorgestellt (siehe Adeline \ref{sc:adel}). Außerdem haben ich die ersten Anfänge des künstlichen Lernens mithilfe von Lernalgorithmen sowie die Mathematik dahinter beschrieben (siehe \ref{ss:la}). Um auch einen kleinen praktischen Einschnitt zu haben wurde ebenfalls grob beschrieben wie ein Rechner in der Lage ist bestimmte Merkmale eines Bildes zu erkennen (siehe CNN \ref{sc:cnn}). 
+Generell wurden jedoch die wesentlichen Vorstufen grob angerissen. Wir haben die Ursprünge der ersten künstlichen Neuronen (siehe MPN Abschnitt \ref{sc:mpn}, Perceptron Abschnitt \ref{sc:per}) gesehen und wie diese auf der Biologie des Menschen basieren. Darüber hinaus wurden die Verbesserungen dieser ersten Modelle vorgestellt (siehe Adeline Abschnitt \ref{sc:adel}). Außerdem haben ich die ersten Anfänge des künstlichen Lernens mithilfe von Lernalgorithmen sowie die Mathematik dahinter beschrieben (siehe Abschnitt \ref{ss:la}). Um auch einen kleinen praktischen Einschnitt zu haben wurde ebenfalls grob beschrieben wie ein Rechner in der Lage ist bestimmte Merkmale eines Bildes zu erkennen (siehe CNN Abschnitt \ref{sc:cnn}). 
