added references to slides

--- a/slides/tex/slides_main.tex
+++ b/slides/tex/slides_main.tex
@@ -60,7 +60,9 @@
 
 \begin{frame}[allowframebreaks]{References}
 
-  \bibliography{demo}
+\nocite{*} 
+
+  \bibliography{verweise}
   \bibliographystyle{abbrv}
 
 \end{frame}
